[gd_scene load_steps=34 format=2]

[ext_resource path="res://images/Patient_Room_002_pi_b.jpg" type="Texture" id=1]
[ext_resource path="res://images/characters/girl3.png" type="Texture" id=2]
[ext_resource path="res://character.gd" type="Script" id=3]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=4]
[ext_resource path="res://images/food_plate.webp" type="Texture" id=5]
[ext_resource path="res://images/circle_gradient.png" type="Texture" id=6]
[ext_resource path="res://food.gd" type="Script" id=7]
[ext_resource path="res://images/characters/man-bald-2.png" type="Texture" id=8]
[ext_resource path="res://npc.gd" type="Script" id=9]
[ext_resource path="res://images/art/art1.jpg" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=17]
radius = 28.0713

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 40, 40 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 40, 80, 40, 40 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 80, 80, 40, 40 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 120, 40, 40 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 40, 120, 40, 40 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 80, 120, 40, 40 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 40, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 80, 40, 40, 40 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "right",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=16]
radius = 16.0
height = 0.0

[sub_resource type="CircleShape2D" id=18]
radius = 85.0

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=23]

[sub_resource type="CircleShape2D" id=24]
radius = 76.0

[sub_resource type="CapsuleShape2D" id=25]
radius = 40.0
height = 46.0

[node name="game" type="Node2D"]

[node name="BG" type="Sprite" parent="."]
position = Vector2( 553, 307 )
scale = Vector2( 0.501667, 0.501667 )
texture = ExtResource( 1 )

[node name="walls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="walls"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="walls/StaticBody2D"]
position = Vector2( -7, 0 )
build_mode = 1
polygon = PoolVector2Array( 324, 34, 325, 162, 367, 165, 364, 404, 324, 402, 326, 580, 318, 645, 234, 581, 244, -10, 930, -17, 947, 693, 315, 649, 317, 580, 783, 582, 781, 33 )

[node name="table" type="CollisionPolygon2D" parent="walls/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 531, 199, 758, 203, 757, 299, 534, 291 )

[node name="wardrobe" type="CollisionPolygon2D" parent="walls/StaticBody2D"]
position = Vector2( 31, -220 )
build_mode = 1
polygon = PoolVector2Array( 582, 247, 728, 255, 727, 299, 577, 293 )

[node name="chair1" type="CollisionPolygon2D" parent="walls/StaticBody2D"]
polygon = PoolVector2Array( 545, 492, 625, 487, 627, 559, 548, 557 )

[node name="chair2" type="CollisionPolygon2D" parent="walls/StaticBody2D"]
position = Vector2( 119, -80 )
polygon = PoolVector2Array( 549, 541, 574, 479, 649, 510, 627, 564 )

[node name="chair3" type="CollisionPolygon2D" parent="walls/StaticBody2D"]
position = Vector2( 141, -372 )
polygon = PoolVector2Array( 549, 541, 574, 479, 626, 514, 598, 554 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/StaticBody2D"]
position = Vector2( 740, 545 )
shape = SubResource( 17 )

[node name="character" type="KinematicBody2D" parent="."]
position = Vector2( 437, 393 )
script = ExtResource( 4 )

[node name="char_sprite" type="AnimatedSprite" parent="character"]
scale = Vector2( 1.425, 1.425 )
frames = SubResource( 4 )
animation = "left"
frame = 1
playing = true
script = ExtResource( 3 )

[node name="char_shape" type="CollisionShape2D" parent="character"]
position = Vector2( -2, 15 )
shape = SubResource( 16 )

[node name="foods" type="Node2D" parent="."]

[node name="food" type="Node2D" parent="foods"]
position = Vector2( 667, 251 )
script = ExtResource( 7 )

[node name="CircleGradient" type="Sprite" parent="foods/food"]
position = Vector2( 1, -0.999985 )
scale = Vector2( 0.187692, 0.187692 )
texture = ExtResource( 6 )

[node name="FoodPlate" type="Sprite" parent="foods/food"]
position = Vector2( 4.29211, 0.0625305 )
scale = Vector2( 0.130278, 0.130278 )
texture = ExtResource( 5 )

[node name="txt_food_score" type="RichTextLabel" parent="foods/food"]
modulate = Color( 1, 0, 0, 1 )
margin_left = -7.0
margin_top = 18.0
margin_right = 56.0
margin_bottom = 47.0
text = "123"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="food_area" type="Area2D" parent="foods/food"]
position = Vector2( -7, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="foods/food/food_area"]
position = Vector2( 7, 0 )
shape = SubResource( 18 )

[node name="npcs" type="YSort" parent="."]

[node name="npc" type="KinematicBody2D" parent="npcs"]
position = Vector2( 499, 510 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="npcs/npc"]
frames = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="npcs/npc"]
position = Vector2( 0, 12 )
shape = SubResource( 23 )

[node name="npc2" type="KinematicBody2D" parent="npcs"]
position = Vector2( 499, 169 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="npcs/npc2"]
frames = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="npcs/npc2"]
position = Vector2( 0, 12 )
shape = SubResource( 23 )

[node name="npc3" type="KinematicBody2D" parent="npcs"]
position = Vector2( 740, 393 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="npcs/npc3"]
frames = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="npcs/npc3"]
position = Vector2( 0, 12 )
shape = SubResource( 23 )

[node name="npc4" type="KinematicBody2D" parent="npcs"]
position = Vector2( 426, 85 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="npcs/npc4"]
frames = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="npcs/npc4"]
position = Vector2( 0, 12 )
shape = SubResource( 23 )

[node name="npc5" type="KinematicBody2D" parent="npcs"]
position = Vector2( 377, 510 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="npcs/npc5"]
frames = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="npcs/npc5"]
position = Vector2( 0, 12 )
shape = SubResource( 23 )

[node name="npc6" type="KinematicBody2D" parent="npcs"]
position = Vector2( 520, 355 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="npcs/npc6"]
frames = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="npcs/npc6"]
position = Vector2( 0, 12 )
shape = SubResource( 23 )

[node name="npc7" type="KinematicBody2D" parent="npcs"]
position = Vector2( 406, 169 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="npcs/npc7"]
frames = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="npcs/npc7"]
position = Vector2( 0, 12 )
shape = SubResource( 23 )

[node name="arts" type="Node2D" parent="."]

[node name="art" type="Node2D" parent="arts"]
position = Vector2( 343, 285 )

[node name="Art1" type="Sprite" parent="arts/art"]
rotation = 1.5708
scale = Vector2( 0.0726496, 0.0726496 )
texture = ExtResource( 10 )

[node name="art" type="Area2D" parent="arts/art"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arts/art/art"]
shape = SubResource( 24 )

[node name="StaticBody2D" type="StaticBody2D" parent="arts/art"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arts/art/StaticBody2D"]
position = Vector2( 6, 0 )
shape = SubResource( 25 )

[node name="art2" type="Node2D" parent="arts"]
position = Vector2( 554, 51 )
rotation = 1.57079

[node name="Art1" type="Sprite" parent="arts/art2"]
rotation = 1.5708
scale = Vector2( 0.0726496, 0.0726496 )
texture = ExtResource( 10 )

[node name="art" type="Area2D" parent="arts/art2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arts/art2/art"]
shape = SubResource( 24 )

[node name="StaticBody2D" type="StaticBody2D" parent="arts/art2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arts/art2/StaticBody2D"]
position = Vector2( 6, 0 )
shape = SubResource( 25 )

[node name="art3" type="Node2D" parent="arts"]
position = Vector2( 466, 554 )
rotation = 1.57079

[node name="Art1" type="Sprite" parent="arts/art3"]
rotation = 1.5708
scale = Vector2( 0.0726496, 0.0726496 )
texture = ExtResource( 10 )

[node name="art" type="Area2D" parent="arts/art3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arts/art3/art"]
shape = SubResource( 24 )

[node name="StaticBody2D" type="StaticBody2D" parent="arts/art3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arts/art3/StaticBody2D"]
position = Vector2( 0, -3.05176e-05 )
shape = SubResource( 25 )

[connection signal="body_entered" from="foods/food/food_area" to="foods/food" method="_on_food_area_body_entered"]
[connection signal="body_exited" from="foods/food/food_area" to="foods/food" method="_on_food_area_body_exited"]
